# fastapi-crudrouter

./: .flake8  .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  asgi.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  dev.requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  vercel.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: releases.py
.github/workflows/: balck.yml  docs.yml  lint.yml  pypi-publish.yml  pytest.yml  update-release-docs.yml
api/: __init__.py  gen.py
docs/: index.md  overrides.md  routing.md
docs/backends/: async.md  memory.md  sqlalchemy.md
docs/css/: main.css
docs/en/: mkdocs.yml  vercel.json
docs/en/docs/: contributing.md  dependencies.md  index.md  overrides.md  pagination.md  releases.md  routing.md  schemas.md
docs/en/docs/backends/: async.md  gino.md  memory.md  ormar.md  sqlalchemy.md  tortoise.md
docs/en/docs/css/: main.css  termynal.css
docs/en/docs/js/: termy.js
docs/en/overrides/: main.html
fastapi_crudrouter/: __init__.py
fastapi_crudrouter/core/: __init__.py  _base.py  _types.py  _utils.py  async_sqlalchemy.py  beanie.py  databases.py  gino_starlette.py  mem.py  ormar.py  sqlalchemy.py  tortoise.py  utils.py
p38venv/Scripts/: activate  activate.bat  mr_proper-script.py
scripts/: build.py
tests/: __init__.py  conftest.py  dev.requirements.txt  test_base.py  test_config.py  test_custom_ids.py  test_custom_item_id.py  test_datasource.py  test_default_factory.py  test_dependencies.py  test_exclude.py  test_integrity_errors.py  test_openapi_schema.py  test_overloads.py  test_pagination.py  test_pks.py  test_prefix.py  test_query_params.py  test_router.py  test_schema.py  test_schemathesis.py  test_sqlalchemy_nested_.py  test_sqlalchemy_nested_obj.py  test_sqlalchemy_router.py  test_tortoise_nested_.py  test_two_routers.py  test_version.py  utils.py
tests/conf/: __init__.py  config.py  datasource.py  dev.docker-compose.yml  dev.env
tests/implementations/: LICENCE  __init__.py  _base.py  databases_.py  gino_.py  memory.py  models.py  ormar_.py  overloaded.py  sqlalchemy.py  sqlalchemy_.py  tortoise.py  tortoise_.py
tests/test_dependencies/: test_disable.py  test_per_route.py  test_top_level.py
tests/test_in_memory/: __init__.py  conftest.py  test_in_memory.py
tests/test_integration/: test_backend_not_installed.py  test_typing.py
tests/test_sqlachemy/: __init__.py  conftest.py  test_sqlalchemy.py
tortoise_example/: example.py  model.py  schemas.py
