[tool.poetry]
name = "fastapi-crudrouter"
version = "0.8.5"
description = "A dynamic FastAPI router that automatically creates CRUD routes for your models"
authors = ["Adam Watkins <cadamrun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "<1.9"
fastapi = ">=0.62.0"

[tool.poetry.dev-dependencies]
async_generator = "^1.10"
async-exit-stack = "^1.0.1"

# backends
ormar = ">0.9.4,<0.11"
tortoise-orm = "^0.17.8"
databases = "<0.5.5"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.38.2"
gino-starlette = "^0.1.1"
asyncpg = "^0.25.0"

# testing
pytest = "<7"
pytest-virtualenv = "^1.7.0"
requests = "^2.27.1"
asynctest = "^0.13.0"
psycopg2-binary = "^2.9.3"
pyodbc = "^4.0.32"

# linting
flake8 = "^4.0.1"
flake8-black = "<0.2"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
flake8-bandit = "^3.0.0"
flake8-annotations = "^2.9.0"
flake8-builtins = "^1.5.3"
flake8-variables-names = "^0.0.5"
flake8-functions = "^0.0.7"
flake8-expression-complexity = "^0.0.11"

# type checking
mypy = "0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
