[tool.poetry]
name = "fastapi-crudrouter"
version = "0.8.5"
description = "A dynamic FastAPI router that automatically creates CRUD routes for your models"
authors = ["Adam Watkins <cadamrun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "<=1.9"
fastapi = ">=0.62"

[tool.poetry.dev-dependencies]
dataclasses = {version = "^0.8", python = "~3.6"}
async_generator = "^1.10"
async-exit-stack = "^1.0.1"

# backends
ormar = [
    {version = "<0.9.4", python = "~3.6"},
    {version = "<0.11", python = "^3.7"}
]
tortoise-orm = { version = "^0.17.8", python = "^3.7" }
databases = "<0.5.5"
aiosqlite = "^0.17.0"
SQLAlchemy = ">=1.3.22,<1.4"
SQLAlchemy-Utils = "^0.38.2"
gino-starlette = [
    {version = "<=0.1.2", python = "~3.6"},
    {version = "^0.1.2", python = "^3.7"}
]
asyncpg = "^0.25.0"

# testing
pytest = "<7"
pytest-virtualenv = "^1.7.0"
requests = "^2.27.1"
asynctest = "^0.13.0"
psycopg2-binary = "^2.9.3"
pyodbc = "^4.0.32"

# linting
flake8 = {version = "^3", python = "^3.6"}
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
flake8-builtins = "^1.5.3"
flake8-functions = "^0.0.7"
flake8-expression-complexity = [
    {version = "<0.0.11", python = "~3.6"},
    {version = "^0.0.11", python = "^3.7"}
]
flake8-variables-names = [
    {version = "<0.0.5", python = "~3.6"},
    {version = "^0.0.5", python = "^3.7"}
]
flake8-bandit = [
    {version = "<3.0.0", python = "~3.6"},
    {version = "^3.0.0", python = "^3.7"}
]
flake8-annotations = [
    {version = "<=2.8.0", python = "~3.6"},
    {version = "^2.9.0", python = "^3.7"}
]
black = [
    {version = "<=21b", python = "~3.6"},
    {version = "<=21b", python = "^3.7"}
]
flake8-black = [
    {version = "<=0.3", python = "~3.6"},
    {version = "<=0.3", python = "^3.7"}
]

# type checking
mypy = "0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
